fixed footer spacing, again

--- a/public/css/home.scss
+++ b/public/css/home.scss
@@ -150,8 +150,11 @@
       margin: 100px auto 50px auto;
       display: inline-block;
       @media (max-width: $break-large) {
-        margin: 10px 0px 10px 0px;
+        margin: 50px 0px 10px 0px;
         width: 100%;
+      }
+      @media (max-width: $break-small) {
+        margin: 10px 0px 10px 0px;
       }
     }
 
@@ -174,7 +177,7 @@
       vertical-align: middle;
       margin: 0px 0px 0px 15px;
       @media (max-width: $break-small) {
-          margin: 0px 0px 10px 0px; 
+          margin: 0px 0px 10px 0px;
       }
     }
 
