--- a/public/css/main.css
+++ b/public/css/main.css
@@ -179,7 +179,8 @@ header { overflow: hidden; background-color: #a566ff; }
 #home footer .copyright { display: inline-block; margin: 10px; }
 @media (max-width: 500px) { #home footer .copyright { margin: 0px; text-align: center; } }
 #home footer .footerNav { width: 500px; margin: 100px auto 50px auto; display: inline-block; }
-@media (max-width: 960px) { #home footer .footerNav { margin: 10px 0px 10px 0px; width: 100%; } }
+@media (max-width: 960px) { #home footer .footerNav { margin: 50px 0px 10px 0px; width: 100%; } }
+@media (max-width: 500px) { #home footer .footerNav { margin: 10px 0px 10px 0px; } }
 #home footer a { color: #47525d; margin: 0px 15px 0px 20px; }
 @media (max-width: 500px) { #home footer a { margin: 10px 0px 10px 0px; display: block; width: 100%; text-align: center; } }
 #home footer a:hover { color: #33aaff; }
